[gd_scene load_steps=144 format=2]

[ext_resource path="res://Assets/ben-character/red/rolling/11.png" type="Texture" id=1]
[ext_resource path="res://Assets/ben-character/greeen/rolling/1.png" type="Texture" id=2]
[ext_resource path="res://Assets/ben-character/greeen/rolling/0.png" type="Texture" id=3]
[ext_resource path="res://Assets/ben-character/orange/rolling/3.png" type="Texture" id=4]
[ext_resource path="res://Assets/ben-character/orange/rolling/1.png" type="Texture" id=5]
[ext_resource path="res://Assets/ben-character/red/rolling-updown/11.png" type="Texture" id=6]
[ext_resource path="res://Assets/ben-character/red/rolling/5.png" type="Texture" id=7]
[ext_resource path="res://Assets/ben-character/greeen/rolling/10.png" type="Texture" id=8]
[ext_resource path="res://Assets/ben-character/red/rolling/0.png" type="Texture" id=9]
[ext_resource path="res://Assets/ben-character/orange/rolling/2.png" type="Texture" id=10]
[ext_resource path="res://Assets/ben-character/greeen/rolling/3.png" type="Texture" id=11]
[ext_resource path="res://Assets/ben-character/red/rolling-updown/8.png" type="Texture" id=12]
[ext_resource path="res://Assets/ben-character/red/rolling/3.png" type="Texture" id=13]
[ext_resource path="res://Assets/ben-character/red/rolling/1.png" type="Texture" id=14]
[ext_resource path="res://Assets/ben-character/red/rolling/6.png" type="Texture" id=15]
[ext_resource path="res://Assets/ben-character/orange/idle/1.png" type="Texture" id=16]
[ext_resource path="res://Assets/ben-character/red/idle/3.png" type="Texture" id=17]
[ext_resource path="res://Assets/ben-character/orange/idle/3.png" type="Texture" id=18]
[ext_resource path="res://Assets/ben-character/greeen/rolling-updown/1.png" type="Texture" id=19]
[ext_resource path="res://Assets/ben-character/orange/rolling-updown/1.png" type="Texture" id=20]
[ext_resource path="res://Assets/ben-character/red/idle/6.png" type="Texture" id=21]
[ext_resource path="res://Assets/ben-character/orange/rolling-updown/4.png" type="Texture" id=22]
[ext_resource path="res://Assets/ben-character/orange/idle/5.png" type="Texture" id=23]
[ext_resource path="res://Assets/ben-character/greeen/idle/6.png" type="Texture" id=24]
[ext_resource path="res://Assets/ben-character/orange/rolling-updown/7.png" type="Texture" id=25]
[ext_resource path="res://Assets/ben-character/greeen/idle/4.png" type="Texture" id=26]
[ext_resource path="res://Assets/ben-character/orange/rolling-updown/2.png" type="Texture" id=27]
[ext_resource path="res://Assets/ben-character/red/rolling-updown/3.png" type="Texture" id=28]
[ext_resource path="res://Assets/ben-character/orange/rolling-updown/3.png" type="Texture" id=29]
[ext_resource path="res://Assets/ben-character/red/idle/2.png" type="Texture" id=30]
[ext_resource path="res://Assets/ben-character/red/idle/5.png" type="Texture" id=31]
[ext_resource path="res://Assets/ben-character/greeen/rolling/5.png" type="Texture" id=32]
[ext_resource path="res://Assets/ben-character/greeen/rolling-updown/4.png" type="Texture" id=33]
[ext_resource path="res://Assets/ben-character/greeen/rolling/6.png" type="Texture" id=34]
[ext_resource path="res://Assets/ben-character/orange/rolling/6.png" type="Texture" id=35]
[ext_resource path="res://Assets/ben-character/orange/rolling/4.png" type="Texture" id=36]
[ext_resource path="res://Assets/ben-character/red/rolling/8.png" type="Texture" id=37]
[ext_resource path="res://Assets/ben-character/greeen/rolling-updown/3.png" type="Texture" id=38]
[ext_resource path="res://Assets/ben-character/greeen/rolling/4.png" type="Texture" id=39]
[ext_resource path="res://Assets/ben-character/orange/rolling-updown/0.png" type="Texture" id=40]
[ext_resource path="res://Assets/ben-character/orange/rolling-updown/11.png" type="Texture" id=41]
[ext_resource path="res://Assets/ben-character/orange/rolling/5.png" type="Texture" id=42]
[ext_resource path="res://Assets/ben-character/orange/rolling/11.png" type="Texture" id=43]
[ext_resource path="res://Assets/ben-character/red/idle/4.png" type="Texture" id=44]
[ext_resource path="res://Assets/ben-character/greeen/rolling-updown/7.png" type="Texture" id=45]
[ext_resource path="res://Assets/ben-character/red/rolling-updown/9.png" type="Texture" id=46]
[ext_resource path="res://Assets/ben-character/red/rolling/9.png" type="Texture" id=47]
[ext_resource path="res://Assets/ben-character/greeen/rolling-updown/8.png" type="Texture" id=48]
[ext_resource path="res://Assets/ben-character/orange/rolling/0.png" type="Texture" id=49]
[ext_resource path="res://Assets/ben-character/greeen/rolling-updown/0.png" type="Texture" id=50]
[ext_resource path="res://Assets/ben-character/greeen/idle/2.png" type="Texture" id=51]
[ext_resource path="res://Assets/ben-character/greeen/idle/0.png" type="Texture" id=52]
[ext_resource path="res://Assets/ben-character/red/rolling-updown/2.png" type="Texture" id=53]
[ext_resource path="res://Assets/ben-character/orange/idle/2.png" type="Texture" id=54]
[ext_resource path="res://Assets/ben-character/red/rolling/10.png" type="Texture" id=55]
[ext_resource path="res://Assets/ben-character/red/rolling/7.png" type="Texture" id=56]
[ext_resource path="res://Assets/ben-character/orange/rolling-updown/5.png" type="Texture" id=57]
[ext_resource path="res://Assets/ben-character/greeen/rolling/9.png" type="Texture" id=58]
[ext_resource path="res://Assets/ben-character/greeen/rolling-updown/11.png" type="Texture" id=59]
[ext_resource path="res://Assets/ben-character/orange/rolling-updown/10.png" type="Texture" id=60]
[ext_resource path="res://Assets/ben-character/red/rolling-updown/10.png" type="Texture" id=61]
[ext_resource path="res://Assets/ben-character/red/rolling/4.png" type="Texture" id=62]
[ext_resource path="res://Assets/ben-character/orange/rolling/10.png" type="Texture" id=63]
[ext_resource path="res://Assets/ben-character/red/rolling/2.png" type="Texture" id=64]
[ext_resource path="res://Assets/ben-character/red/idle/1.png" type="Texture" id=65]
[ext_resource path="res://Assets/ben-character/greeen/idle/3.png" type="Texture" id=66]
[ext_resource path="res://Assets/ben-character/greeen/rolling-updown/2.png" type="Texture" id=67]
[ext_resource path="res://Assets/ben-character/greeen/rolling-updown/9.png" type="Texture" id=68]
[ext_resource path="res://Assets/ben-character/greeen/rolling-updown/6.png" type="Texture" id=69]
[ext_resource path="res://Assets/ben-character/orange/idle/6.png" type="Texture" id=70]
[ext_resource path="res://Assets/ben-character/red/rolling-updown/0.png" type="Texture" id=71]
[ext_resource path="res://Assets/ben-character/red/idle/0.png" type="Texture" id=72]
[ext_resource path="res://Assets/ben-character/red/rolling-updown/4.png" type="Texture" id=73]
[ext_resource path="res://Assets/ben-character/orange/idle/4.png" type="Texture" id=74]
[ext_resource path="res://Assets/ben-character/greeen/idle/5.png" type="Texture" id=75]
[ext_resource path="res://Assets/ben-character/greeen/rolling-updown/5.png" type="Texture" id=76]
[ext_resource path="res://Assets/ben-character/red/rolling-updown/1.png" type="Texture" id=77]
[ext_resource path="res://Assets/ben-character/greeen/rolling-updown/10.png" type="Texture" id=78]
[ext_resource path="res://Assets/ben-character/orange/idle/0.png" type="Texture" id=79]
[ext_resource path="res://Assets/ben-character/red/rolling-updown/7.png" type="Texture" id=80]
[ext_resource path="res://Assets/ben-character/greeen/rolling/7.png" type="Texture" id=81]
[ext_resource path="res://Assets/ben-character/orange/rolling/7.png" type="Texture" id=82]
[ext_resource path="res://Assets/ben-character/greeen/rolling/2.png" type="Texture" id=83]
[ext_resource path="res://Assets/ben-character/greeen/rolling/11.png" type="Texture" id=84]
[ext_resource path="res://Assets/ben-character/orange/rolling/9.png" type="Texture" id=85]
[ext_resource path="res://Assets/ben-character/red/rolling-updown/5.png" type="Texture" id=86]
[ext_resource path="res://Assets/ben-character/greeen/rolling/8.png" type="Texture" id=87]
[ext_resource path="res://Assets/ben-character/orange/rolling/8.png" type="Texture" id=88]
[ext_resource path="res://Assets/ben-character/red/rolling-updown/6.png" type="Texture" id=89]
[ext_resource path="res://Assets/ben-character/blue/idle/0.png" type="Texture" id=90]
[ext_resource path="res://Assets/ben-character/blue/rolling/2.png" type="Texture" id=91]
[ext_resource path="res://Assets/ben-character/blue/rolling/9.png" type="Texture" id=92]
[ext_resource path="res://Assets/ben-character/blue/idle/6.png" type="Texture" id=93]
[ext_resource path="res://Assets/ben-character/blue/rolling-updown/9.png" type="Texture" id=94]
[ext_resource path="res://Assets/ben-character/blue/rolling/3.png" type="Texture" id=95]
[ext_resource path="res://Assets/ben-character/blue/rolling-updown/6.png" type="Texture" id=96]
[ext_resource path="res://Assets/ben-character/blue/rolling-updown/7.png" type="Texture" id=97]
[ext_resource path="res://Assets/ben-character/blue/rolling/7.png" type="Texture" id=98]
[ext_resource path="res://Assets/ben-character/blue/idle/5.png" type="Texture" id=99]
[ext_resource path="res://Assets/ben-character/blue/rolling/1.png" type="Texture" id=100]
[ext_resource path="res://Assets/ben-character/blue/rolling-updown/10.png" type="Texture" id=101]
[ext_resource path="res://Assets/ben-character/blue/rolling-updown/8.png" type="Texture" id=102]
[ext_resource path="res://Assets/ben-character/blue/rolling-updown/0.png" type="Texture" id=103]
[ext_resource path="res://Assets/ben-character/blue/idle/4.png" type="Texture" id=104]
[ext_resource path="res://Assets/ben-character/blue/rolling-updown/3.png" type="Texture" id=105]
[ext_resource path="res://Assets/ben-character/blue/rolling-updown/2.png" type="Texture" id=106]
[ext_resource path="res://Assets/ben-character/blue/rolling-updown/5.png" type="Texture" id=107]
[ext_resource path="res://Assets/ben-character/orange/rolling-updown/6.png" type="Texture" id=108]
[ext_resource path="res://Assets/ben-character/blue/rolling/10.png" type="Texture" id=109]
[ext_resource path="res://Assets/ben-character/blue/rolling/8.png" type="Texture" id=110]
[ext_resource path="res://Assets/ben-character/orange/rolling-updown/8.png" type="Texture" id=111]
[ext_resource path="res://Assets/ben-character/greeen/idle/1.png" type="Texture" id=112]
[ext_resource path="res://Assets/ben-character/blue/rolling/4.png" type="Texture" id=113]
[ext_resource path="res://Assets/ben-character/orange/rolling-updown/9.png" type="Texture" id=114]
[ext_resource path="res://Assets/ben-character/blue/rolling-updown/4.png" type="Texture" id=115]
[ext_resource path="res://Assets/ben-character/blue/rolling/5.png" type="Texture" id=116]
[ext_resource path="res://Assets/ben-character/blue/rolling/11.png" type="Texture" id=117]
[ext_resource path="res://Assets/ben-character/blue/rolling/0.png" type="Texture" id=118]
[ext_resource path="res://Assets/ben-character/blue/idle/2.png" type="Texture" id=119]
[ext_resource path="res://Assets/ben-character/blue/rolling-updown/1.png" type="Texture" id=120]
[ext_resource path="res://Assets/ben-character/blue/rolling-updown/11.png" type="Texture" id=121]
[ext_resource path="res://Assets/ben-character/blue/idle/3.png" type="Texture" id=122]
[ext_resource path="res://Assets/ben-character/blue/rolling/6.png" type="Texture" id=123]
[ext_resource path="res://Assets/ben-character/blue/idle/1.png" type="Texture" id=124]
[ext_resource path="res://Scenes/Mobs/imposter.gd" type="Script" id=129]
[ext_resource path="res://Assets/explosion/frame0011.png" type="Texture" id=130]
[ext_resource path="res://Assets/explosion/frame0004.png" type="Texture" id=131]
[ext_resource path="res://Assets/explosion/frame0001.png" type="Texture" id=132]
[ext_resource path="res://Assets/explosion/frame0002.png" type="Texture" id=133]
[ext_resource path="res://Assets/explosion/frame0005.png" type="Texture" id=134]
[ext_resource path="res://Assets/explosion/frame0010.png" type="Texture" id=135]
[ext_resource path="res://Assets/explosion/frame0012.png" type="Texture" id=136]
[ext_resource path="res://Assets/explosion/frame0007.png" type="Texture" id=137]
[ext_resource path="res://Assets/explosion/frame0003.png" type="Texture" id=138]
[ext_resource path="res://Assets/explosion/frame0008.png" type="Texture" id=139]
[ext_resource path="res://Assets/explosion/frame0006.png" type="Texture" id=140]
[ext_resource path="res://Assets/explosion/frame0000.png" type="Texture" id=141]
[ext_resource path="res://Assets/explosion/frame0009.png" type="Texture" id=142]

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ ExtResource( 141 ), ExtResource( 132 ), ExtResource( 133 ), ExtResource( 138 ), ExtResource( 131 ), ExtResource( 134 ), ExtResource( 140 ), ExtResource( 137 ), ExtResource( 139 ), ExtResource( 142 ), ExtResource( 135 ), ExtResource( 130 ), ExtResource( 136 ) ],
"loop": true,
"name": "explosion",
"speed": 5.0
}, {
"frames": [ ExtResource( 90 ), ExtResource( 124 ), ExtResource( 119 ), ExtResource( 122 ), ExtResource( 104 ), ExtResource( 99 ), ExtResource( 93 ) ],
"loop": true,
"name": "idle_blue",
"speed": 6.0
}, {
"frames": [ ExtResource( 52 ), ExtResource( 112 ), ExtResource( 51 ), ExtResource( 66 ), ExtResource( 26 ), ExtResource( 75 ), ExtResource( 24 ) ],
"loop": true,
"name": "idle_green",
"speed": 6.0
}, {
"frames": [ ExtResource( 79 ), ExtResource( 16 ), ExtResource( 54 ), ExtResource( 18 ), ExtResource( 74 ), ExtResource( 23 ), ExtResource( 70 ) ],
"loop": true,
"name": "idle_orange",
"speed": 6.0
}, {
"frames": [ ExtResource( 72 ), ExtResource( 65 ), ExtResource( 30 ), ExtResource( 17 ), ExtResource( 44 ), ExtResource( 31 ), ExtResource( 21 ) ],
"loop": true,
"name": "idle_red",
"speed": 6.0
}, {
"frames": [ ExtResource( 103 ), ExtResource( 120 ), ExtResource( 106 ), ExtResource( 105 ), ExtResource( 115 ), ExtResource( 107 ), ExtResource( 96 ), ExtResource( 97 ), ExtResource( 102 ), ExtResource( 94 ), ExtResource( 101 ), ExtResource( 121 ) ],
"loop": true,
"name": "roll_north_blue",
"speed": 10.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 19 ), ExtResource( 67 ), ExtResource( 38 ), ExtResource( 33 ), ExtResource( 76 ), ExtResource( 69 ), ExtResource( 45 ), ExtResource( 48 ), ExtResource( 68 ), ExtResource( 78 ), ExtResource( 59 ) ],
"loop": true,
"name": "roll_north_green",
"speed": 10.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 20 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 22 ), ExtResource( 57 ), ExtResource( 108 ), ExtResource( 25 ), ExtResource( 111 ), ExtResource( 114 ), ExtResource( 60 ), ExtResource( 41 ) ],
"loop": true,
"name": "roll_north_orange",
"speed": 10.0
}, {
"frames": [ ExtResource( 71 ), ExtResource( 77 ), ExtResource( 53 ), ExtResource( 28 ), ExtResource( 73 ), ExtResource( 86 ), ExtResource( 89 ), ExtResource( 80 ), ExtResource( 12 ), ExtResource( 46 ), ExtResource( 61 ), ExtResource( 6 ) ],
"loop": true,
"name": "roll_north_red",
"speed": 10.0
}, {
"frames": [ ExtResource( 117 ), ExtResource( 109 ), ExtResource( 92 ), ExtResource( 110 ), ExtResource( 98 ), ExtResource( 123 ), ExtResource( 116 ), ExtResource( 113 ), ExtResource( 95 ), ExtResource( 91 ), ExtResource( 100 ), ExtResource( 118 ) ],
"loop": true,
"name": "roll_northwest_blue",
"speed": 10.0
}, {
"frames": [ ExtResource( 84 ), ExtResource( 8 ), ExtResource( 58 ), ExtResource( 87 ), ExtResource( 81 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 39 ), ExtResource( 11 ), ExtResource( 83 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "roll_northwest_green",
"speed": 10.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 63 ), ExtResource( 85 ), ExtResource( 88 ), ExtResource( 82 ), ExtResource( 35 ), ExtResource( 42 ), ExtResource( 36 ), ExtResource( 4 ), ExtResource( 10 ), ExtResource( 5 ), ExtResource( 49 ) ],
"loop": true,
"name": "roll_northwest_orange",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 55 ), ExtResource( 47 ), ExtResource( 37 ), ExtResource( 56 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 62 ), ExtResource( 13 ), ExtResource( 64 ), ExtResource( 14 ), ExtResource( 9 ) ],
"loop": true,
"name": "roll_northwest_red",
"speed": 10.0
}, {
"frames": [ ExtResource( 121 ), ExtResource( 101 ), ExtResource( 94 ), ExtResource( 102 ), ExtResource( 97 ), ExtResource( 96 ), ExtResource( 107 ), ExtResource( 115 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 120 ), ExtResource( 103 ) ],
"loop": true,
"name": "roll_south_blue",
"speed": 10.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 78 ), ExtResource( 68 ), ExtResource( 48 ), ExtResource( 45 ), ExtResource( 69 ), ExtResource( 76 ), ExtResource( 33 ), ExtResource( 38 ), ExtResource( 67 ), ExtResource( 19 ), ExtResource( 50 ) ],
"loop": true,
"name": "roll_south_green",
"speed": 10.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 60 ), ExtResource( 114 ), ExtResource( 111 ), ExtResource( 25 ), ExtResource( 108 ), ExtResource( 57 ), ExtResource( 22 ), ExtResource( 29 ), ExtResource( 27 ), ExtResource( 20 ), ExtResource( 40 ) ],
"loop": true,
"name": "roll_south_orange",
"speed": 10.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 61 ), ExtResource( 46 ), ExtResource( 12 ), ExtResource( 80 ), ExtResource( 89 ), ExtResource( 86 ), ExtResource( 73 ), ExtResource( 28 ), ExtResource( 53 ), ExtResource( 77 ), ExtResource( 71 ) ],
"loop": true,
"name": "roll_south_red",
"speed": 10.0
}, {
"frames": [ ExtResource( 118 ), ExtResource( 100 ), ExtResource( 91 ), ExtResource( 95 ), ExtResource( 113 ), ExtResource( 116 ), ExtResource( 123 ), ExtResource( 98 ), ExtResource( 110 ), ExtResource( 92 ), ExtResource( 109 ), ExtResource( 117 ) ],
"loop": true,
"name": "roll_southeast_blue",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 83 ), ExtResource( 11 ), ExtResource( 39 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 81 ), ExtResource( 87 ), ExtResource( 58 ), ExtResource( 8 ), ExtResource( 84 ) ],
"loop": true,
"name": "roll_southeast_green",
"speed": 10.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 36 ), ExtResource( 42 ), ExtResource( 35 ), ExtResource( 82 ), ExtResource( 88 ), ExtResource( 85 ), ExtResource( 63 ), ExtResource( 43 ) ],
"loop": true,
"name": "roll_southeast_orange",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 14 ), ExtResource( 64 ), ExtResource( 13 ), ExtResource( 62 ), ExtResource( 7 ), ExtResource( 15 ), ExtResource( 56 ), ExtResource( 37 ), ExtResource( 47 ), ExtResource( 55 ), ExtResource( 1 ) ],
"loop": true,
"name": "roll_southeast_red",
"speed": 10.0
} ]

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.760784, 0.192157, 0.192157, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 2
border_width_bottom = 3
border_color = Color( 0.0705882, 0.027451, 0.027451, 0 )
border_blend = true
anti_aliasing_size = 0.235

[sub_resource type="OccluderPolygon2D" id=16]
polygon = PoolVector2Array( 0, -43, -17, -39, -29, -30, -39, -19, -42, 0, -40, 18, -31, 30, -18, 37, 0, 40, 17, 36, 31, 28, 39, 18, 42, 0, 39, -16, 29, -29, 18, -38 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 9.7, 9.35279 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 28.75, 29.25 )

[node name="Imposter" type="KinematicBody2D"]
script = ExtResource( 129 )

[node name="position" type="Position2D" parent="."]

[node name="animated_sprite" type="AnimatedSprite" parent="position"]
scale = Vector2( 3.53642, 3.53642 )
frames = SubResource( 13 )
animation = "explosion"
frame = 12

[node name="ProgressBar" type="ProgressBar" parent="."]
visible = false
margin_left = -75.0
margin_top = -110.0
margin_right = -25.0
margin_bottom = -100.0
rect_scale = Vector2( 3, 3 )
custom_styles/fg = SubResource( 14 )
value = 40.0
percent_visible = false

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 16 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, -1.19209e-06 )
scale = Vector2( 5, 4.97178 )

[node name="playerHitbox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.0999999, -0.100567 )
shape = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -2 )
shape = SubResource( 18 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
